--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,22 +1,42 @@
 .catalog {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  justify-items: center;
+  align-items: center;
+  gap: 48px;
 
-  max-width: 944px;
   margin: 0 auto;
 
+  text-align: center;
+
+  @media screen and (min-width: 488px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (min-width: 768px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media screen and (min-width: 1024px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
   &__card {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+    justify-items: center;
     align-items: center;
+
     width: 200px;
     height: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 48px;
-  }
 
-  &__card:not(:nth-child(4n)) {
-    margin-right: 48px;
+    @include transition(all);
+
+    &:hover {
+      transform: scale(1.2);
+      color: #34568b;
+    }
   }
 }
